--- a/package.json
+++ b/package.json
@@ -44,10 +44,7 @@
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/heroku/node-js-getting-started.git"
-  },
+  
   "keywords": [
     "node",
     "heroku",
@@ -57,6 +54,6 @@
   "bugs": {
     "url": "https://github.com/heroku/node-js-getting-started/issues"
   },
-  "homepage": "https://github.com/heroku/node-js-getting-started#readme",
-  "author": "ratnesh_choudhary"
+  "homepage": "https://satyamtradersindore.herokuapp.com/",
+  "author": "SoftSolutions"
 }
