--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cool-ascii-faces": "^1.3.4",
+    "debug": "^4.3.1",
     "ejs": "^2.5.6",
     "expo-server-sdk": "^3.2.0",
     "express": "^4.15.2",
@@ -44,7 +45,6 @@
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
-  
   "keywords": [
     "node",
     "heroku",
